// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageRangeCitationView test  should render endPage only 1`] = `
<div>
  <span
    class="citationPageRange"
  >
    <span
      class="citationEndPage"
    >
      11
    </span>
    .
  </span>
</div>
`;

exports[`PageRangeCitationView test  should render nothing if search key not found 1`] = `
<div>
  <span
    class="citationPageRange empty"
  >
     
     
  </span>
</div>
`;

exports[`PageRangeCitationView test  should render startPage only 1`] = `
<div>
  <span
    class="citationPageRange"
  >
    <span
      class="citationStartPage"
    >
      11
    </span>
    .
  </span>
</div>
`;

exports[`PageRangeCitationView test  should render startPage only if end page is empty 1`] = `
<div>
  <span
    class="citationPageRange"
  >
    <span
      class="citationStartPage"
    >
      13
    </span>
    .
  </span>
</div>
`;

exports[`PageRangeCitationView test  should render startPage to endPage 1`] = `
<div>
  <span
    class="citationPageRange"
  >
    <span
      class="citationStartPage"
    >
      13
    </span>
    -
    <span
      class="citationEndPage"
    >
      17
    </span>
    .
  </span>
</div>
`;
